# InkBytes

./: .gitignore  CLAUDE.md  Makefile
Curator/: .gitignore  (+2 more)
Curator/apps/curator/: Dockerfile  env.example.yaml  env.yaml  main.py  pyproject.toml  requirements.txt  scratch_embed_spike.py  scratch_reembed_bgem3.py
Curator/apps/curator/contracts/: __init__.py  answer_v1.py  article_v1.py  enriched_v1.py  page_v1.py
Curator/apps/curator/core/: api_server.py  application.py  config.py
Curator/apps/curator/fixtures/: fixture_dedup_1_clean.json  fixture_dedup_2_noisy.json  fixture_dedup_3_changed.json  sample_article.json  sample_article_2.json
Curator/apps/curator/prompts/: assistant.md  enrich.md  synthesize.md  triage.md
Curator/apps/curator/scripts/: backfill_covers.py  backfill_entity_photos.py  backfill_event_centroids.py  backfill_lead_images.py  backfill_media_rail.py  backfill_noise_pages.py  backfill_promo_pages.py  cluster_reclustering_prototype.py  fix_stub_page.sh  ner_prepass_poc.py  publish_command.py  recluster.py  recluster_fresh.py  recluster_megabuckets.py  reembed.py  test_content_filter.py  test_lead_image_validation.py  test_ner_prepass.py  test_promo_filter.py  test_taxonomy_widen.py
Curator/apps/curator/services/: content_filter.py  cost_meter.py  cover_image.py  database_service.py  embedding_service.py  entity_photo.py  llm_service.py  media_validation.py  message_service.py  ner_prepass.py  promo_filter.py  push_service.py  taxonomy.py
Curator/apps/curator/skills/: assistant.py  cluster.py  enrich.py  illustrate.py  synthesize.py  triage.py
Messor/apps/scraper/: README.md  __init__.py  env.example.yaml  env.yaml  inkbytes  main.py  pyproject.toml  requirements.txt  scraping_session.json
Messor/apps/scraper/api/: main.py
Messor/apps/scraper/core/: __init__.py  api_server.py  application.py  command_processor.py  config.py  feed_scraper.py  gnews_search.py  scraper.py  staging_store.py
(+660 files in other folders)
