[project]
name = "inkbytes-messor"
version = "1.0.0"
description = "Messor — the InkBytes harvester agent."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
  { name = "Julian De La Rosa", email = "julian.delarosa.suncar@gmail.com" },
]
license = { text = "Proprietary" }

# Runtime deps are tracked in requirements.txt to keep the install path
# pip-native and CI-friendly. Don't duplicate them here.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "services*", "api*"]
exclude = ["tests*", "data*", "logs*", "scripts*"]

# --- Dev tooling --------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]   # handled by formatter

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
